--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 title: "Tensor Slayer Research"
 description: "AI-Guided Model Enhancement Through Direct Tensor Manipulation"
-author: "AI Researcher"
+author: "Tensor-Slayer"
 email: ""
 url: "https://areu01or00.github.io/Tensor-Slayer.github.io"
-baseurl: "/Tensor-Slayer.github.io"
+baseurl: ""
 
 # Theme
-theme: minima
+remote_theme: pages-themes/minimal@v0.2.0
 
 # Plugins
 plugins:
