--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Tensor Slayer Research"
 description: "AI-Guided Model Enhancement Through Direct Tensor Manipulation"
-author: "AI Researcher"
+author: "Tensor-Slayer"
 email: ""
 url: "https://areu01or00.github.io/Tensor-Slayer.github.io"
 baseurl: ""
