--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "https://areu01or00.github.io"
 baseurl: "/Tensor-Slayer.github.io"
 
 # Theme
-remote_theme: pages-themes/architect@v0.2.0
+# remote_theme: pages-themes/architect@v0.2.0
 
 # Plugins
 plugins:
